hub-repo-master@ef0c4e5088b/k8s/openshift-fokus-piveau.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: piveau-hub-repo
  labels:
    app: piveau-hub-repo
spec:
  ports:
    - name: http
      port: 8080
      targetPort: default
      protocol: TCP
    - name: http-cli
      port: 8085
      targetPort: cli
      protocol: TCP
  selector:
    app: piveau-hub-repo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: piveau-hub-repo
  name: piveau-hub-repo
spec:
  selector:
    matchLabels:
      app: piveau-hub-repo
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: piveau-hub-repo
    spec:
      containers:
        - name: piveau-hub-repo
          image: dockerhub.fokus.fraunhofer.de:5000/piveau/hub/piveau-hub-repo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: default
            - containerPort: 8085
              name: cli
          startupProbe:
            httpGet:
              path: /health
              port: default
            initialDelaySeconds: 10
            failureThreshold: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: default
            failureThreshold: 1
            periodSeconds: 10
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 1000m
              memory: 4Gi
            limits:
              cpu: 2000m
              memory: 8Gi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: piveau-hub-repo
  labels:
    app: piveau-hub-repo
  annotations:
    route.openshift.io/termination: edge
spec:
  rules:
    - host: piveau-hub-repo-piveau.apps.osc.fokus.fraunhofer.de
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: piveau-hub-repo
                port:
                  name: http
    - host: piveau-hub-repo-cli-piveau.apps.osc.fokus.fraunhofer.de
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: piveau-hub-repo
                port:
                  name: http-cli
